
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int Anew ;
 int Aold ;
 int False ;
 int OWRITE ;
 scalar_t__ create (int ,int ,int) ;
 int envfile () ;
 int envremove () ;
 int err (char*,int ) ;
 int getpagesz () ;
 int kwrite (int ) ;
 int myidentity () ;
 scalar_t__ outfd ;
 int outfile ;
 int sethostowner (int ) ;
 int steal () ;
 int them ;
 int us ;
 int youridentity () ;

__attribute__((used)) static int
spin(void)
{
 outfd = create(outfile, OWRITE, 0600);
 if(outfd < 0)
 {
  err("can't create \"%s\": %r", outfile);
  return False;
 }

 if(!getpagesz())
  return False;

 if(!myidentity())
  return False;

 if(!youridentity())
  return False;

 if(!envfile())
  return False;

 if(!kwrite(Anew))
  return False;

 if(!sethostowner(us))
  return False;

 if(!steal())
  return False;

 if(!kwrite(Aold))
  return False;

 if(!sethostowner(them))
  return False;

 return envremove();
}
