; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/plan9/local/extr_3383.c_spin.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/plan9/local/extr_3383.c_spin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@outfile = common dso_local global i32 0, align 4
@OWRITE = common dso_local global i32 0, align 4
@outfd = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [22 x i8] c"can't create \22%s\22: %r\00", align 1
@False = common dso_local global i32 0, align 4
@Anew = common dso_local global i32 0, align 4
@us = common dso_local global i32 0, align 4
@Aold = common dso_local global i32 0, align 4
@them = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @spin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spin() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @outfile, align 4
  %3 = load i32, i32* @OWRITE, align 4
  %4 = call i64 @create(i32 %2, i32 %3, i32 384)
  store i64 %4, i64* @outfd, align 8
  %5 = load i64, i64* @outfd, align 8
  %6 = icmp slt i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %0
  %8 = load i32, i32* @outfile, align 4
  %9 = call i32 @err(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = load i32, i32* @False, align 4
  store i32 %10, i32* %1, align 4
  br label %62

11:                                               ; preds = %0
  %12 = call i32 (...) @getpagesz()
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %16, label %14

14:                                               ; preds = %11
  %15 = load i32, i32* @False, align 4
  store i32 %15, i32* %1, align 4
  br label %62

16:                                               ; preds = %11
  %17 = call i32 (...) @myidentity()
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %21, label %19

19:                                               ; preds = %16
  %20 = load i32, i32* @False, align 4
  store i32 %20, i32* %1, align 4
  br label %62

21:                                               ; preds = %16
  %22 = call i32 (...) @youridentity()
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %26, label %24

24:                                               ; preds = %21
  %25 = load i32, i32* @False, align 4
  store i32 %25, i32* %1, align 4
  br label %62

26:                                               ; preds = %21
  %27 = call i32 (...) @envfile()
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %31, label %29

29:                                               ; preds = %26
  %30 = load i32, i32* @False, align 4
  store i32 %30, i32* %1, align 4
  br label %62

31:                                               ; preds = %26
  %32 = load i32, i32* @Anew, align 4
  %33 = call i32 @kwrite(i32 %32)
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %37, label %35

35:                                               ; preds = %31
  %36 = load i32, i32* @False, align 4
  store i32 %36, i32* %1, align 4
  br label %62

37:                                               ; preds = %31
  %38 = load i32, i32* @us, align 4
  %39 = call i32 @sethostowner(i32 %38)
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %43, label %41

41:                                               ; preds = %37
  %42 = load i32, i32* @False, align 4
  store i32 %42, i32* %1, align 4
  br label %62

43:                                               ; preds = %37
  %44 = call i32 (...) @steal()
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %48, label %46

46:                                               ; preds = %43
  %47 = load i32, i32* @False, align 4
  store i32 %47, i32* %1, align 4
  br label %62

48:                                               ; preds = %43
  %49 = load i32, i32* @Aold, align 4
  %50 = call i32 @kwrite(i32 %49)
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %54, label %52

52:                                               ; preds = %48
  %53 = load i32, i32* @False, align 4
  store i32 %53, i32* %1, align 4
  br label %62

54:                                               ; preds = %48
  %55 = load i32, i32* @them, align 4
  %56 = call i32 @sethostowner(i32 %55)
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %60, label %58

58:                                               ; preds = %54
  %59 = load i32, i32* @False, align 4
  store i32 %59, i32* %1, align 4
  br label %62

60:                                               ; preds = %54
  %61 = call i32 (...) @envremove()
  store i32 %61, i32* %1, align 4
  br label %62

62:                                               ; preds = %60, %58, %52, %46, %41, %35, %29, %24, %19, %14, %7
  %63 = load i32, i32* %1, align 4
  ret i32 %63
}

declare dso_local i64 @create(i32, i32, i32) #1

declare dso_local i32 @err(i8*, i32) #1

declare dso_local i32 @getpagesz(...) #1

declare dso_local i32 @myidentity(...) #1

declare dso_local i32 @youridentity(...) #1

declare dso_local i32 @envfile(...) #1

declare dso_local i32 @kwrite(i32) #1

declare dso_local i32 @sethostowner(i32) #1

declare dso_local i32 @steal(...) #1

declare dso_local i32 @envremove(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
